...
                android:layout_height="?android:attr/actionBarSize"
                app:tabMode="fixed"
                app:tabGravity="fill"
                />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerTeam"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
...
